#  Copyright (c) 2020 SBA - MIT License

[metadata]
name = non_blocking_io_wrapper
classifiers=
    # How mature is this project? Common values are
    #   2 - Pre-Alpha
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 4 - Beta

    # Indicate who your project is intended for
    Intended Audience :: Developers
    Operating System :: OS Independent

    # Pick your license as you wish (should match "license" above)
    License :: OSI Approved :: MIT License

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

    Topic :: Communications

license = MIT
author = SBA
author_email = s-ball@laposte.net
description = Non blocking io wrapper over an input stream
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/s-ball/non_blocking_io_wrapper

[options]
packages= non_blocking_io_wrapper
python_requires = >=3.6
setup_requires = setuptools>=42
                 setuptools_scm>=3.4
                 wheel
